fix(overflow, about): fix overflow throughout website, make image in about page responsive

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,7 @@
+:root {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
 }
@@ -59,6 +63,10 @@
   float: left;
   border-width: 5px;
   border: solid black;
+  min-width: 250px;
+  min-height: 250px;
+  width: 20%;
+  height: auto;
 }
 
 .customTitle {
